<resources>
    <string name="app_name">KeepMeOut-Ui</string>
    <string name="label_app_name">Keep Me Out!</string>
    <string name="title_device_lock">Device Lock</string>
    <string name="title_scheduled">Schedule</string>

    <string name="settings_menu">Settings</string>
    <string name="rate_menu">Rate</string>
    <string name="contact_menu">Contact for support</string>
    <string name="facebook" translatable="false">Facebook page</string>
    <string name="help_title">Help/FAQ</string>
    <string name="label_lock_warning">Your Device will locked for the above dialed time</string>
    <string name="label_no_schedule_locks">No Schedule locks found. Your scheduled locks will appear here</string>
    <string name="label_hrs">hrs</string>
    <string name="label_mins">mins</string>
</resources>